Add asset occupancy history
